etc/fake-pfs/envoy.yaml
admin:
    access_log:
        - name: envoy.access_loggers.stderr
          typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog
    address:
        socket_address:
            address: 0.0.0.0
            port_value: 9901
layered_runtime:
    layers:
        - name: static_layer_0
          static_layer:
              overload:
                  global_downstream_max_connections: 50000
# overload_manager:
#     actions:
#         - name: envoy.overload_actions.shrink_heap
#           triggers:
#               - name: envoy.resource_monitors.fixed_heap
#                 threshold:
#                     value: 0.95
#         - name: envoy.overload_actions.stop_accepting_requests
#           triggers:
#               - name: envoy.resource_monitors.fixed_heap
#                 threshold:
#                     value: 0.98
#     refresh_interval: 0.25s
#     resource_monitors:
#         - name: envoy.resource_monitors.fixed_heap
#           typed_config:
#               "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
#               max_heap_size_bytes: 50000000
static_resources:
    clusters:
        - connect_timeout: 10s
          dns_failure_refresh_rate:
              base_interval: 0.05s
              max_interval: 0.1s
          dns_lookup_family: V4_ONLY
          dns_refresh_rate: 5s
          health_checks:
              - grpc_health_check: {}
                healthy_threshold: 1
                interval: 10s
                no_traffic_healthy_interval: 10s
                no_traffic_interval: 10s
                timeout: 10s
                unhealthy_threshold: 2
          lb_policy: random
          load_assignment:
              cluster_name: pachd-grpc
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: localhost
                                      port_value: 9000
          name: pachd-grpc
          per_connection_buffer_limit_bytes: 1024
          type: strict_dns
          typed_extension_protocol_options:
              envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                  "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
                  explicit_http_config:
                      http2_protocol_options: {}
          upstream_connection_options:
              tcp_keepalive: {}
    listeners:
        - address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 9001
          filter_chains:
              - filters:
                    - name: envoy.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          access_log:
                              - name: envoy.access_loggers.stdout
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                                    log_format:
                                        text_format_source:
                                            inline_string: |
                                                [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% (%GRPC_STATUS(SNAKE_STRING)%) %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"
                          codec_type: auto
                          common_http_protocol_options:
                              headers_with_underscores_action: REJECT_REQUEST
                              idle_timeout: 86400s
                          http_filters:
                              - name: envoy.filters.http.grpc_stats
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                                    enable_upstream_stats: true
                                    stats_for_all_methods: true
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                          http_protocol_options:
                              accept_http_10: false
                          http2_protocol_options:
                              initial_connection_window_size: 1048576
                              initial_stream_window_size: 65536
                              # initial_connection_window_size: 320000000
                              # initial_stream_window_size: 320000000
                              max_concurrent_streams: 100
                          request_timeout: 604800s
                          route_config:
                              virtual_hosts:
                                  - domains:
                                        - "*"
                                    name: any
                                    retry_policy:
                                        host_selection_retry_max_attempts: 4
                                        num_retries: 4
                                        retry_on: connect-failure
                                    routes:
                                        - match:
                                              grpc: {}
                                              prefix: /
                                          route:
                                              cluster: pachd-grpc
                                              timeout: 604800s
                          stat_prefix: proxy-http
                          stream_idle_timeout: 86400s
                          use_remote_address: true
          name: proxy-http
          per_connection_buffer_limit_bytes: 1024
          traffic_direction: INBOUND
